--- a/Style.CSS
+++ b/Style.CSS
@@ -5,7 +5,7 @@ body {
 }
 
 header {
-    background-color: maroon;
+    background-color: #FFACAC;
     color: #fff;
     display: flex;
     align-items: center;
