--- a/style.css
+++ b/style.css
@@ -274,11 +274,12 @@ html,body{
 
 } */
 .container .gallery{
+  /* background-color: antiquewhite; */
   position: relative;
-  min-height: 0;
+  height:200vh;
   width: 90%;
   margin: auto;
-  padding: 35px 0;
+  padding: 20px 0;
   display: grid;
   grid-template-columns: auto auto auto auto;
   row-gap: 10px;
@@ -369,3 +370,4 @@ footer{
   
     }
 }
+/* ZOHA code end here */
