--- a/style/skillStyle.css
+++ b/style/skillStyle.css
@@ -1,29 +1,26 @@
-
-.skills{
-   
-width: 75%;
-margin: auto;
-
+.skills {
+  width: 75%;
+  margin: auto;
 }
 
 strong,
 b {
-	font-weight: bold;
-	line-height: inherit;
+  font-weight: bold;
+  line-height: inherit;
 }
 
 small {
-	font-size: 60%;
-	line-height: inherit;
+  font-size: 60%;
+  line-height: inherit;
 }
 
 ol,
 ul {
-	list-style: none;
+  list-style: none;
 }
 
 li {
-	display: block;
+  display: block;
 }
 
 /**
@@ -31,78 +28,117 @@ li {
  * -------------------------------------------------------------------
  */
 .skill-bars {
-	list-style: none;
-	margin: 6rem 0 3rem;
+  list-style: none;
+  margin: 6rem 0 3rem;
 }
 .skill-bars li {
-	height: .6rem;
-	background: #a1a1a1;
-	width: 100%;
-	margin-bottom: 6rem;
-	padding: 0;
-	position: relative;
+  height: 0.6rem;
+  background: #a1a1a1;
+  width: 100%;
+  margin-bottom: 6rem;
+  padding: 0;
+  position: relative;
 }
 .skill-bars li strong {
-	position: absolute;
-	left: 0;
-	top: -3rem;
-	font-family: "poppins-bold", sans-serif;
-	color: #313131;
-	text-transform: uppercase;
-	letter-spacing: .2rem;
-	font-size: 1.5rem;
-	line-height: 2.4rem;
+  position: absolute;
+  left: 0;
+  top: -3rem;
+  font-family: "poppins-bold", sans-serif;
+  color: #313131;
+  text-transform: uppercase;
+  letter-spacing: 0.2rem;
+  font-size: 1.5rem;
+  line-height: 2.4rem;
 }
 .skill-bars li .progress {
-	background: #313131;
-	position: relative;
-	height: 100%;
+  background: #313131;
+  position: relative;
+  height: 100%;
 }
 .skill-bars li .progress span {
-	position: absolute;
-	right: 0;
-	top: -3.6rem;
-	display: block;
-	font-family: "poppins-regular", sans-serif;
-	color: white;
-	font-size: 1.1rem;
-	line-height: 1;
-	background: #313131;
-	padding: .6rem .6rem;
-	border-radius: 3px;
+  position: absolute;
+  right: 0;
+  top: -3.6rem;
+  display: block;
+  font-family: "poppins-regular", sans-serif;
+  color: white;
+  font-size: 1.1rem;
+  line-height: 1;
+  background: #313131;
+  padding: 0.6rem 0.6rem;
+  border-radius: 3px;
 }
 .skill-bars li .progress span::after {
-	position: absolute;
-	left: 50%;
-	bottom: -5px;
-	margin-left: -5px;
-	border-right: 5px solid transparent;
-	border-left: 5px solid transparent;
-	border-top: 5px solid #313131;
-	content: "";
+  position: absolute;
+  left: 50%;
+  bottom: -5px;
+  margin-left: -5px;
+  border-right: 5px solid transparent;
+  border-left: 5px solid transparent;
+  border-top: 5px solid #313131;
+  content: "";
 }
 
-.skill-bars li .percent5   { width: 5%; }
-.skill-bars li .percent10  { width: 10%; }
-.skill-bars li .percent15  { width: 15%; }
-.skill-bars li .percent20  { width: 20%; }
-.skill-bars li .percent25  { width: 25%; }
-.skill-bars li .percent30  { width: 30%; }
-.skill-bars li .percent35  { width: 35%; }
-.skill-bars li .percent40  { width: 40%; }
-.skill-bars li .percent45  { width: 45%; }
-.skill-bars li .percent50  { width: 50%; }
-.skill-bars li .percent55  { width: 55%; }
-.skill-bars li .percent60  { width: 60%; }
-.skill-bars li .percent65  { width: 65%; }
-.skill-bars li .percent70  { width: 70%; }
-.skill-bars li .percent75  { width: 75%; }
-.skill-bars li .percent80  { width: 80%; }
-.skill-bars li .percent85  { width: 85%; }
-.skill-bars li .percent90  { width: 90%; }
-.skill-bars li .percent95  { width: 95%; }
-.skill-bars li .percent100 { width: 100%; }
-
+.skill-bars li .percent5 {
+  width: 5%;
+}
+.skill-bars li .percent10 {
+  width: 10%;
+}
+.skill-bars li .percent15 {
+  width: 15%;
+}
+.skill-bars li .percent20 {
+  width: 20%;
+}
+.skill-bars li .percent25 {
+  width: 25%;
+}
+.skill-bars li .percent30 {
+  width: 30%;
+}
+.skill-bars li .percent35 {
+  width: 35%;
+}
+.skill-bars li .percent40 {
+  width: 40%;
+}
+.skill-bars li .percent45 {
+  width: 45%;
+}
+.skill-bars li .percent50 {
+  width: 50%;
+}
+.skill-bars li .percent55 {
+  width: 55%;
+}
+.skill-bars li .percent60 {
+  width: 60%;
+}
+.skill-bars li .percent65 {
+  width: 65%;
+}
+.skill-bars li .percent70 {
+  width: 70%;
+}
+.skill-bars li .percent75 {
+  width: 75%;
+}
+.skill-bars li .percent80 {
+  width: 80%;
+}
+.skill-bars li .percent85 {
+  width: 85%;
+}
+.skill-bars li .percent90 {
+  width: 90%;
+}
+.skill-bars li .percent95 {
+  width: 95%;
+}
+.skill-bars li .percent100 {
+  width: 100%;
+}
 
 /** 
  * ===================================================================
@@ -111,198 +147,197 @@ li {
  * ------------------------------------------------------------------- 
  */
 .grey-section {
-	background: #ebebeb;
+  background: #ebebeb;
 }
 .grey-section p.lead {
-	color: #7d7d7d;
+  color: #7d7d7d;
 }
 .section-intro {
-	max-width: 700px;
-	margin-left: auto;
-	margin-right: auto;
-	text-align: center;
-	margin-bottom: 3.6rem;
-	position: relative;
+  max-width: 700px;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+  margin-bottom: 3.6rem;
+  position: relative;
 }
 .section-intro h1 {
-	font-family: "poppins-semibold", serif;
-	font-size: 3.6rem;
-	color: #313131;
-	line-height: 1.25;
-	margin-bottom: 1.2rem;
+  font-family: "poppins-semibold", serif;
+  font-size: 3.6rem;
+  color: #313131;
+  line-height: 1.25;
+  margin-bottom: 1.2rem;
 }
 .section-intro h5 {
-	color: #FF0077;
-	font-size: 1.6rem;
-	line-height: 1.875;
-	margin-bottom: 0.3rem;
-	letter-spacing: .4rem;
+  color: #ff0077;
+  font-size: 1.6rem;
+  line-height: 1.875;
+  margin-bottom: 0.3rem;
+  letter-spacing: 0.4rem;
 }
 
-
 svg text.blink {
-    animation: blink 2s ease-out;
+  animation: blink 2s ease-out;
+}
+
+/* svg text:hover::after {
+  } */
+
+body {
+  text-align: center;
+  background-color: #000000;
+  color: #ffffff;
+  position: relative;
+}
+
+#tagi {
+  width: 900px;
+  margin: auto;
+}
+
+@keyframes blink {
+  0% {
+    text-shadow: 0 0 20px rgba(226, 25, 45, 0);
   }
-  
-  svg text:hover::after {
+  20% {
+    fill: rgba(226, 25, 45, 1);
+    text-shadow: -5px -5px 20px rgba(226, 25, 45, 0.8),
+      5px -5px 20px rgba(226, 25, 45, 0.8), 5px 5px 20px rgba(226, 25, 45, 0.8),
+      -5px 5px 20px rgba(226, 25, 45, 0.8);
   }
-  
-  body {
-    text-align: center;
-    background-color: #000000;
-    color: #ffffff;
-    position: relative;
+  30% {
+    fill: rgba(226, 25, 45, 1);
   }
-  
-  #tagi {
-    width: 900px;
-    margin: auto;
+  100% {
+    text-shadow: 0 0 20px rgba(226, 25, 45, 0);
   }
-  
-  @keyframes blink {
-    0% {
-      text-shadow: 0 0 20px rgba(226, 25, 45, 0);
-    }
-    20% {
-      fill: rgba(226, 25, 45, 1);
-      text-shadow: -5px -5px 20px rgba(226, 25, 45, 0.8), 5px -5px 20px rgba(226, 25, 45, 0.8), 5px 5px 20px rgba(226, 25, 45, 0.8), -5px 5px 20px rgba(226, 25, 45, 0.8);
-      ;
-    }
-    30% {
-      fill: rgba(226, 25, 45, 1);
-      
-    }
-    100% {
-      text-shadow: 0 0 20px rgba(226, 25, 45, 0);
-    }
-  }
-  
-  .st0 {
-    font-size: 68px;
-  }
-  
-  .st1 {
-    font-size: 27px;
-  }
-  
-  .st2 {
-    font-size: 82px;
-  }
-  
-  .st3 {
-    font-size: 41px;
-  }
-  
-  .st4 {
-    font-size: 41px;
-  }
-  
-  .st5 {
-    fill: #808080;
-  }
-  
-  .st6 {
-    font-size: 24px;
-  }
-  
-  .st7 {
-    font-size: 24px;
-  }
-  
-  .st8 {
-    font-size: 62px;
-  }
-  
-  .st9 {
-    font-size: 86px;
-  }
-  
-  .st10 {
-    font-size: 18px;
-  }
-  
-  .st11 {
-    font-size: 18px;
-  }
-  
-  .st12 {
-    font-size: 25px;
-  }
-  
-  .st13 {
-    font-size: 25px;
-  }
-  
-  .st14 {
-    font-size: 25px;
-  }
-  
-  .st15 {
-    font-size: 32px;
-  }
-  
-  .st16 {
-    font-size: 32px;
-  }
-  
-  .st17 {
-    font-family: 'Open Sans';
-    font-weight: 600;
-    fill: #a0a0a0;
-  }
-  
-  .st18 {
-    font-size: 22px;
-  }
-  
-  .st19 {
-    font-size: 22px;
-  }
-  
-  .st20 {
-    font-size: 36px;
-  }
-  
-  .st21 {
-    font-size: 19px;
-  }
-  
-  .st22 {
-    font-size: 51px;
-  }
-  
-  .st23 {
-    font-size: 26px;
-  }
-  
-  .st24 {
-    font-size: 33px;
-  }
-  
-  .st25 {
-    font-size: 20px;
-  }
-  
-  .st26 {
-    font-size: 23px;
-  }
-  
-  .st27 {
-    font-size: 23px;
-  }
-  
-  .st28 {
-    font-family: 'Open Sans';
-  }
-  
-  .st29 {
-    font-size: 54px;
-  }
-  
-  .st30 {
-    font-size: 20px;
-  }
-  
-  .st31 {
-    font-size: 37px;
-  }
+}
+
+.st0 {
+  font-size: 68px;
+}
+
+.st1 {
+  font-size: 27px;
+}
+
+.st2 {
+  font-size: 82px;
+}
+
+.st3 {
+  font-size: 41px;
+}
+
+.st4 {
+  font-size: 41px;
+}
+
+.st5 {
+  fill: #808080;
+}
+
+.st6 {
+  font-size: 24px;
+}
+
+.st7 {
+  font-size: 24px;
+}
+
+.st8 {
+  font-size: 62px;
+}
+
+.st9 {
+  font-size: 86px;
+}
+
+.st10 {
+  font-size: 18px;
+}
+
+.st11 {
+  font-size: 18px;
+}
+
+.st12 {
+  font-size: 25px;
+}
+
+.st13 {
+  font-size: 25px;
+}
+
+.st14 {
+  font-size: 25px;
+}
+
+.st15 {
+  font-size: 32px;
+}
+
+.st16 {
+  font-size: 32px;
+}
+
+.st17 {
+  font-family: "Open Sans";
+  font-weight: 600;
+  fill: #a0a0a0;
+}
+
+.st18 {
+  font-size: 22px;
+}
+
+.st19 {
+  font-size: 22px;
+}
+
+.st20 {
+  font-size: 36px;
+}
+
+.st21 {
+  font-size: 19px;
+}
+
+.st22 {
+  font-size: 51px;
+}
+
+.st23 {
+  font-size: 26px;
+}
+
+.st24 {
+  font-size: 33px;
+}
+
+.st25 {
+  font-size: 20px;
+}
+
+.st26 {
+  font-size: 23px;
+}
+
+.st27 {
+  font-size: 23px;
+}
+
+.st28 {
+  font-family: "Open Sans";
+}
+
+.st29 {
+  font-size: 54px;
+}
+
+.st30 {
+  font-size: 20px;
+}
+
+.st31 {
+  font-size: 37px;
+}
