--- a/style.css
+++ b/style.css
@@ -33,14 +33,14 @@ body {
       Vaneeza Noor's Code starts here
 /* ---------------------------------------------------------- */
 
-header {
+/* header {
   background-color: maroon;
   color: #fff;
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 15px;
-}
+} */
 
 .logo {
   font-size: 24px;
@@ -176,7 +176,7 @@ nav a:hover {
   animation: slideAnimation 10s infinite;
 }
 
-/*Dont use or try to uncomment this.hehhehehehehehe otherwise aho */
+/*Don't use or try to uncomment this.hehhehehehehehe otherwise aho */
 /* .typed-out{
       overflow: hidden;
       border-right: .15em solid white;
@@ -196,11 +196,11 @@ nav a:hover {
 
 /* khadija */
 
-body {
+/* body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
   padding: 0;
-}
+} */
 
 #subjects-section {
   background-color: darkslategrey;
@@ -250,13 +250,13 @@ body {
 }
 
 /* code ends here*/
-
+/* ------------------------------------- */
 /* Nisha's Code Starts Here */
-body {
+/* body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-}
+} */
 
 .social-media-section {
   text-align: center;
@@ -283,29 +283,10 @@ body {
 .social-media-icon:hover {
   transform: scale(1.2); /* Increase the scale to zoom in on hover */
 }
-/* Nish's Code Ends Here */
+/* Nisha's Code Ends Here */
 
 /*    ZOHA ASGHAR CODE START FROM HERE */
 
-* {
-  margin: 0;
-  padding: 0;
-}
-/* header{
-  background-color: antiquewhite;
-  padding: 2%;
-  display: flex;
-  justify-content: center;
-  font-family: serif;
-  color: rgb(21, 98, 165);
-  margin-bottom: 0;
-
-}
-html,body{
-  width: 100%;
-  height: 100%;
-
-} */
 .container .gallery {
   /* background-color: antiquewhite; */
   position: relative;
@@ -400,7 +381,7 @@ div.gallery .img:hover img {
 /* ZOHA code end here */
 
 /*laiba's code start here*/
-body,
+/* body, */
 h1,
 h2 {
   margin: 0;
@@ -424,14 +405,14 @@ h2 {
   margin: 0;
   padding: 0;
 } */
-body {
+/* body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #468b97;
-  /* color: #fff; */
-  text-align: justify;
-}
+  background-color: #468b97; */
+/* color: #fff; */
+/* text-align: justify;
+} */
 header {
   background-color: #333;
   color: #fff;
